rename plugin entry point

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,4 +101,4 @@ environment = { MACOSX_DEPLOYMENT_TARGET = '10.14' }
 profile = "black"
 
 [project.entry-points."bia_bob_plugins"]
-plugin1 = "pyclesperanto._bia_bob_plugins:list_bia_bob_plugins"
+plugin_pyclesperanto = "pyclesperanto._bia_bob_plugins:list_bia_bob_plugins"
