--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.11"]
-        platform: [ubuntu-latest, macos-latest] #, windows-latest]
+        python-version: ["3.9", "3.13"]
+        platform: [ubuntu-latest, macos-latest, windows-latest]
     defaults:
       run:
         shell: "bash -l {0}"
@@ -26,19 +26,30 @@ jobs:
         id: checkout
         uses: actions/checkout@v4
 
-      - name: Get conda - ${{ matrix.python-version }}
-        id: get-conda
-        uses: conda-incubator/setup-miniconda@v3
+      - name: setup micromamba
+        id: setup-micromamba
+        uses: mamba-org/setup-micromamba@v2.0.1
         with:
-          python-version: ${{ matrix.python-version }}
-          miniforge-version: latest
-          activate-environment: test
-          use-mamba: true
+          cache-environment: true
+          post-cleanup: 'all'
+          create-args: >-
+            python=${{ matrix.python-version }}
+            pytest pytest-cov pytest-benchmark scikit-image
 
-      - name: Dependencies
-        id: install-dependencies
-        run: |
-          mamba install -y pytest pytest-cov pytest-benchmark scikit-image
+
+      # - name: Get conda - ${{ matrix.python-version }}
+      #   id: get-conda
+      #   uses: conda-incubator/setup-miniconda@v3
+      #   with:
+      #     python-version: ${{ matrix.python-version }}
+      #     miniforge-version: latest
+      #     activate-environment: test
+      #     use-mamba: true
+
+      # - name: Dependencies
+      #   id: install-dependencies
+      #   run: |
+      #     mamba install -y pytest pytest-cov pytest-benchmark scikit-image
 
       - name: Install OpenCL (pocl)
         id: install-pocl
@@ -55,7 +66,7 @@ jobs:
       - name: Build
         id: build
         run: |
-          pip install . -vvv --config-settings=cmake.define.CMAKE_PREFIX_PATH=$CONDA_PREFIX
+          pip install . -v --config-settings=cmake.define.CMAKE_PREFIX_PATH=$CONDA_PREFIX
 
       - name: Test
         id: test
