--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
         id: setup-micromamba
         uses: mamba-org/setup-micromamba@v2.0.1
         with:
+          environment-name: test
           cache-environment: true
           post-cleanup: 'all'
           create-args: >-
