--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,3 +81,34 @@ jobs:
           password: ${{ secrets.PYPI_API_TOKEN }}
           skip-existing: true
           verbose: true
+
+  update_citation:
+      name: update CITATION
+      needs: [upload_all]
+      runs-on: ubuntu-latest
+      if: github.event_name == 'release' && success()
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+
+        - name: Download Zenodo CFF
+          run: |
+            curl -L https://zenodo.org/records/14199059/export/cff -o CITATION.cff
+            sed -i '/^abstract:/,/^authors:/d' CITATION.cff
+            sed -i '1iauthors:' CITATION.cff
+
+        - name: Update CITATION.cff
+          run: |
+            python -m pip install --upgrade pip
+            pip install cffconvert
+            cffconvert --output-format=cff-citation-file --output-path=CITATION.cff setup.py
+
+        - name: Commit CITATION.cff
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          run: |
+            git config --global user.name "github-actions[bot]"
+            git config --global user.email "github-actions[bot]@users.noreply.github.com"
+            git add CITATION.cff
+            git diff-index --quiet HEAD || git commit -m "Update citation" --allow-empty
+            git push
