--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,16 +60,7 @@ testpaths = ["tests"]
 
 [tool.cibuildwheel]
 build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
-skip = [
-  "cp27-*",
-  "cp36*",
-  "cp37*",
-  "pp*",
-  "*-win32",
-  "*-musllinux*",
-  "*_i686",
-  "*_universal2",
-]
+skip = ["*-win32", "*-musllinux*", "*_i686", "*_universal2"]
 build-frontend = "build"
 build-verbosity = 1
 test-command = "pytest {project}/tests/test_import.py"
