--- a/pixi.toml
+++ b/pixi.toml
@@ -3,7 +3,7 @@ channels = ["conda-forge"]
 platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]
 
 [dependencies]
-python = ">=3.8"
+python = ">=3.8,<3.14"
 pip = "*"
 setuptools = "*"
 wheel = "*"
