--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ option(BUILD_SHARED_LIBS OFF)
 file(READ "${CMAKE_CURRENT_SOURCE_DIR}/pyclesperanto/_version.py" VERSION_FILE_CONTENT)
 string(REGEX MATCH "CLIC_VERSION = \"([^\"]+)\"" _ ${VERSION_FILE_CONTENT})
 # set(CLIC_REPO_TAG ${CMAKE_MATCH_1})
-set(CLIC_REPO_TAG "master")
+set(CLIC_REPO_TAG "patch-2")
 set(CLIC_REPO_URL "https://github.com/clEsperanto/CLIc.git")
 set(BUILD_OPENCL_BACKEND ON CACHE BOOL "Build with OCL if FOUND" FORCE)
 set(BUILD_CUDA_BACKEND ON CACHE BOOL "Build with CUDA if FOUND" FORCE)
